--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 1,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -23,27 +22,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
-   "metadata": {
-    "autoscroll": false,
-    "collapsed": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"TEST\"\"\"\n",
+    "\n",
+    "# Specify the url\n",
     "START_URL = 'https://brickset.com/sets/year-2016'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 3,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -63,8 +56,13 @@
     "    # Figure out how to select the text of the title\n",
     "    # of each legoset. A title should look like: \n",
     "    # \"10252: Volkswagen Beetle\"\n",
-    "    pass\n",
-    "\n",
+    "    metas = soup.find_all(\"div\",{\"class\":\"meta\"})\n",
+    "    list_titles = []\n",
+    "    for meta in metas:\n",
+    "        element = meta.find(\"h1\").text\n",
+    "        list_titles.append(element)\n",
+    "    return(list_titles)\n",
+    "    \n",
     "def parse_bricks(url):\n",
     "    \"\"\" Fetches Lego Bricks page and extracts titles \"\"\"\n",
     "    # Lookup the documentation to the \"requests\" library\n",
@@ -72,22 +70,22 @@
     "    # Use requests to make a get request to the\n",
     "    # url given in the argument \"url\" (which is a string)\n",
     "    # and get the raw HTML body of the response\n",
-    "    #\n",
+    "    URL = requests.get(url)\n",
+    "   \n",
     "    # Use \"BeautifulSoup\" to parse this HTML. \n",
-    "    #\n",
+    "    soup = BeautifulSoup(URL.text, \"html.parser\")\n",
+    "    \n",
+    "    titles = get_titles(soup)\n",
     "    # Use the \"get_titles\" function to extract the\n",
     "    # titles from the BeautifulSoup object.\n",
-    "    #\n",
-    "    # Return the titles\n",
-    "    pass"
+    "    return titles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 4,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -101,10 +99,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 5,
    "metadata": {
     "autoscroll": false,
-    "collapsed": false,
     "ein.hycell": false,
     "ein.tags": "worksheet-0",
     "slideshow": {
@@ -116,11 +113,63 @@
     "assert(bricks[0] == '10251:  Brick Bank')\n",
     "assert(bricks[9] == '10722:  Snake Showdown')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['10251:  Brick Bank',\n",
+       " '10252:  Volkswagen Beetle',\n",
+       " '10253:  Big Ben',\n",
+       " '10254:  Winter Holiday Train',\n",
+       " '10654:  XL Creative Brick Box',\n",
+       " '10702:  Creative Building Set',\n",
+       " '10705:  Creative Building Basket',\n",
+       " '10720:  Police Helicopter Chase',\n",
+       " '10721:  Iron Man vs. Loki',\n",
+       " '10722:  Snake Showdown',\n",
+       " \"10723:  Ariel's Dolphin Carriage\",\n",
+       " '10724:  Batman & Superman vs. Lex Luthor',\n",
+       " '10725:  Lost Temple',\n",
+       " \"10726:  Stephanie's Horse Carriage\",\n",
+       " \"10727:  Emma's Ice Cream Truck\",\n",
+       " \"10728:  Mia's Vet Clinic\",\n",
+       " \"10729:  Cinderella's Carriage\",\n",
+       " '10801:  Baby Animals',\n",
+       " '10802:  Savanna',\n",
+       " '10803:  Arctic',\n",
+       " '10804:  Jungle',\n",
+       " '10805:  Around the World',\n",
+       " '10806:  Horses',\n",
+       " '10807:  Horse Trailer',\n",
+       " '10808:  Little Plane']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bricks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3",
+   "language": "python",
    "name": "python3"
   },
   "language_info": {
@@ -133,7 +182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.5"
   },
   "name": "exercises.ipynb"
  },
